--- a/4 - Tables and Persistence/EmojiDictionary/EmojiDictionary/Base.lproj/Main.storyboard
+++ b/4 - Tables and Persistence/EmojiDictionary/EmojiDictionary/Base.lproj/Main.storyboard
@@ -49,7 +49,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Root View Controller" id="46B-qJ-wPu">
-                        <barButtonItem key="leftBarButtonItem" systemItem="edit" id="br8-UY-zzY">
+                        <barButtonItem key="leftBarButtonItem" title="Edit" id="br8-UY-zzY">
                             <connections>
                                 <action selector="editButtonTapped:" destination="nP1-zf-svz" id="Gwk-Ba-0ig"/>
                             </connections>
