--- a/4 - Tables and Persistence/EmojiDictionary (Sectioned)/EmojiDictionary/Base.lproj/Main.storyboard
+++ b/4 - Tables and Persistence/EmojiDictionary (Sectioned)/EmojiDictionary/Base.lproj/Main.storyboard
@@ -13,13 +13,13 @@
         <scene sceneID="Seb-HS-4jr">
             <objects>
                 <tableViewController id="nP1-zf-svz" customClass="EmojiTableViewControllerV2" customModule="EmojiDictionary" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="y6Q-hC-iHA">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="y6Q-hC-iHA">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EmojiCell" textLabel="bCG-Gx-UmA" detailTextLabel="Byr-s4-TQt" style="IBUITableViewCellStyleSubtitle" id="bps-Bh-mhQ">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="55.5" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bps-Bh-mhQ" id="fCG-2b-cYo">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
